--- a/index.html
+++ b/index.html
@@ -72,15 +72,15 @@
   <header>
     <div class="hero">
       <a class="navbar-brand" href="index-2.html">
-        <img src="img/logo.png" alt="">
+        <img src="img/company-logo-tp.png" alt="">
       </a>
       
       <div class="owl-carousel owl-theme heroCarousel">
         <div class="item">
           <div class="hero__slide">
-            <img src="img/hero-2.png" alt="">
+            <img src="img/draft/carousel1.jpg" alt="">
             <div class="hero__slideContent text-center">
-              <h1>Dream Heaven City</h1>
+              <h1>Pipelines</h1>
               <p>If you are looking at blank cassettes on the web Lorem ipsum dolor sit amet, consectetur adipisicing  eiusmod tempor incididunt.</p>
 							<a class="btn btn--leftBorder btn--rightBorder" href="#/">Details</a>							
 							<span class="hero__slideContent--right"></span>
@@ -89,9 +89,9 @@
         </div>
         <div class="item">
           <div class="hero__slide">
-            <img src="img/hero-1.png" alt="">
+            <img src="img/draft/carousel2.jpg" alt="">
             <div class="hero__slideContent text-center">
-              <h1>Dream Heaven City</h1>
+              <h1>Refinery & Petrochemicals</h1>
               <p>If you are looking at blank cassettes on the web Lorem ipsum dolor sit amet, consectetur adipisicing  eiusmod tempor incididunt.</p>
 							<a class="btn btn--leftBorder btn--rightBorder" href="#/">Details</a>
 							<span class="hero__slideContent--right"></span>
@@ -100,9 +100,20 @@
         </div>
         <div class="item">
           <div class="hero__slide">
-            <img src="img/hero-3.png" alt="">
+            <img src="img/draft/carousel3.jpg" alt="">
             <div class="hero__slideContent text-center">
-              <h1>Dream Heaven City</h1>
+              <h1>Offshore Oil & Gas</h1>
+              <p>If you are looking at blank cassettes on the web Lorem ipsum dolor sit amet, consectetur adipisicing  eiusmod tempor incididunt.</p>
+							<a class="btn btn--leftBorder btn--rightBorder" href="#/">Details</a>							
+							<span class="hero__slideContent--right"></span>
+            </div>
+          </div>
+		</div>
+		<div class="item">
+          <div class="hero__slide">
+            <img src="img/draft/carousel4.jpg" alt="">
+            <div class="hero__slideContent text-center">
+              <h1>Onshore Oil & Gas</h1>
               <p>If you are looking at blank cassettes on the web Lorem ipsum dolor sit amet, consectetur adipisicing  eiusmod tempor incididunt.</p>
 							<a class="btn btn--leftBorder btn--rightBorder" href="#/">Details</a>							
 							<span class="hero__slideContent--right"></span>
@@ -118,20 +129,26 @@
 			<div class="row align-items-center">
 				<div class="col-md-5">
 					<div class="about__img text-center text-md-left mb-5 mb-md-0">
-						<img class="img-fluid" src="img/about.png" alt="">
+						<img class="img-fluid" src="img/oil-flare.jpg" alt="">
 						<a href="#/" class="about__img__date text-center">
 							<h3>26</h3>
-							<p>Years <br> of Creativity</p>
+							<p>Years <br> of Engineering</p>
 						</a>
 					</div>
 				</div>
 				<div class="col-md-7 pl-xl-5">
 					<div class="section-intro">
 						<h4 class="section-intro__title">About our Company</h4>
-						<h2 class="section-intro__subtitle">We've been creating <br> Awesome Since 1992</h2>
+						<h2 class="section-intro__subtitle">Welcome</h2>
 					</div>
-					<p>If you are looking at blank cassettes on the web lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. Eiusmod tempor incididunt ut labore et dolore magna aliqua consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-					<p>If you are looking at blank cassettes on the web lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
+					<p>Triune Energy Services is an ISO certified leading design, engineering and consultancy company with a global presence in the Hydrocarbon Sector. 
+
+						<p>
+
+							Our portfolio includes Engineering for challenging projects in the North Sea; various deepwater fields in Brazil and Africa; complex offshore process platforms in Vietnam, Iran & Netherlands; Refineries in India, Kuwait & Oman; Petrochemicals in India, Pipeline projects in Bangladesh, Kuwait , Reliance Largest Pipeline in India and many more.....
+						</p>
+ 
+</p>
 					<a class="btn btn--rightBorder mt-4" href="#/">Read More</a>
 				</div>
 			</div>
@@ -195,66 +212,54 @@
 			</div>
 
 			<div class="row align-items-end pb-md-5 mb-4">
-				<div class="col-md-7 mb-4 mb-md-0">
+				<div class="col-md-6 mb-4 mb-md-0">
 					<div class="portfolio__img">
-						<img class="img-fluid" src="img/portfolio1.png" alt="">
+						<img class="img-fluid" src="img/offshore.jpg" alt="">
 					</div>
 				</div>
-				<div class="col-md-5 mb-5 pl-xl-5">
-					<h4 class="section-intro__title left-border">December, 2018</h4>
-					<h2 class="section-intro__subtitle small">Pure Bedroom Architecture</h2>
-					<p>If you are looking at blank cassettes on the web lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
+				<div class="col-md-6 mb-5 pl-xl-5">
+					<h4 class="section-intro__title left-border">December, 2004</h4>
+					<h2 class="section-intro__subtitle small">ERHA FPSO Project</h2>
+					<p>FEED, Process Design Verification & Updation, Datasheets & RFQs for Critical & Long Lead Items, Detailed Engineering services for the Topsides involving all disciplines, procurement engineering support & bid evaluation, Project Management, Operation and Maintenance manuals and Field Engineering services.</p>
 
 					<a class="btn btn--rightBorder mt-3" href="#/">Read More</a>
 				</div>
 			</div>
 
 			<div class="row align-items-end pb-md-5 mb-4">
-				<div class="col-md-5 mb-5 pr-xl-5 order-2 order-md-1">
-					<h4 class="section-intro__title left-border">December, 2018</h4>
-					<h2 class="section-intro__subtitle small">Pure Bedroom Architecture</h2>
-					<p>If you are looking at blank cassettes on the web lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
+				<div class="col-md-6 mb-5 pr-xl-5 order-2 order-md-1">
+					<h4 class="section-intro__title left-border">January, 2018</h4>
+					<h2 class="section-intro__subtitle small">PMC for Additional Process Units at ONGC Uran</h2>
+					<p>Project Management Consultancy (PMC) for installation of Additional Process units to the existing facilities at Uran Plant of ONGC, India to handle increased availability of additional gas / condensate from ONGC’s Mumbai High, Satellite fields and new marginal fields. The units involve Gas Sweetening Unit, LPG, Condensate Handling Unit, Condensate Fractionating Unit in addition to complete Utilities and Offsites.</p>
 
 					<a class="btn btn--rightBorder mt-3" href="#/">Read More</a>
 				</div>
-				<div class="col-md-7 mb-4 mb-md-0 order-1 order-md-2">
+				<div class="col-md-6 mb-4 mb-md-0 order-1 order-md-2">
 					<div class="portfolio__img">
-						<img class="img-fluid" src="img/portfolio2.png" alt="">
+						<img class="img-fluid" src="img/onshore.jpg" alt="">
 					</div>
 				</div>
 			</div>
 
 			<div class="row align-items-end pb-md-5 mb-4">
-				<div class="col-md-7 mb-4 mb-md-0">
+				<div class="col-md-6 mb-4 mb-md-0">
 					<div class="portfolio__img">
-						<img class="img-fluid" src="img/portfolio3.png" alt="">
+						<img class="img-fluid" src="img/offshore.jpg" alt="">
 					</div>
 				</div>
 
-				<div class="col-md-5 mb-5 pl-xl-5">
-					<h4 class="section-intro__title left-border">December, 2018</h4>
-					<h2 class="section-intro__subtitle small">Pure Bedroom Architecture</h2>
-					<p>If you are looking at blank cassettes on the web lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
+				<div class="col-md-6 mb-5 pl-xl-5">
+					<h4 class="section-intro__title left-border">July, 2019</h4>
+					<h2 class="section-intro__subtitle small">UAE Modules Offshore Platform Project</h2>
+					<p>FEED Endorsement / updation and Detailed Engineering for a New Processing Platform,  Accommodation  (70 men) Platform, Bridge between Platform A & Platform B and Bridge between Platform C & Platform D  and engineering and procurement services for two new sour transfer pumps, Receivers and all related facilities of pipelines and the J-tube of the subsea cable. Providing procedures for site survey / report and detailed engineering for the modifications and Satellite well heads and modifications to existing facilities of Platforms.
+
+</p>
 
 					<a class="btn btn--rightBorder mt-3" href="#/">Read More</a>
 				</div>
 			</div>
 
-			<div class="row align-items-end pb-md-5 mb-4">
-				<div class="col-md-5 mb-5 pr-xl-5 order-2 order-md-1">
-					<h4 class="section-intro__title left-border">December, 2018</h4>
-					<h2 class="section-intro__subtitle small">Pure Bedroom Architecture</h2>
-					<p>If you are looking at blank cassettes on the web lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
 
-					<a class="btn btn--rightBorder mt-3" href="#/">Read More</a>
-				</div>
-
-				<div class="col-md-7 order-1 order-md-2 mb-4 mb-md-0">
-					<div class="portfolio__img">
-						<img class="img-fluid" src="img/portfolio4.png" alt="">
-					</div>
-				</div>
-			</div>
 
 			<div class="text-center pt-2">
 				<button class="btn btn--rightBorder btn--leftBorder">Load More Projects</button>
